Changes since version 0.8.3-rc2
- Added a debian build directory
- Added protocol files for mms://, rtsp:// and pnm://
- Position slider now also shows progress of the cache fill
Changes since version 0.8.3-rc1
- Remove configure options for control buttons. Simply always autohide for
  fullscreen and embedded part and show them otherwise
- Fix another case of video widget stays black cause in kxineplayer
- If position slider is hidden, make buttons small again (like <= 0.8.2)
- Support for AUTOSTART attribute
- Support for FULLSCREENMODE attribute
- Seeking while sliding :-)
- Local .pls and .m3u playlist files support. Works too if autodownloaded, eg
  pls' on http://www.shoutcast.com should work now
Changes since version 0.8.2
- fix for the "video window stays (sometimes/often) black" bug, which seems to
  occur more with the latest Qt versions. KMPlayer uses a XSimpleWindow now
  that is managed by QXEmbed
- Support for Real's CONTROLS/CONSOLE attributes. This makes it possible
  multible plugins cooperate with imagewindow/controlpanel
- Combine control buttons and position slider to one control panel
Changes since version 0.8.2-rc5
- Don't show ffserver setting when no v4l devices are configured
- Stream detection fix for MPlayer-1.0prex (needed for recording)
Changes since version 0.8.2-rc4
- Locale fixes for Xine
- Let Xine play all URLs in playlist
- Change alsa to alsa5/alsa9 audio driver for MPlayer
Changes since version 0.8.2-rc3
- Compile fix for Qt-3.1
- Compile fix for xine-lib-1-rc2
Changes since version 0.8.2-rc2
- Add audio/x-pn-realaudio to supported mimetypes
- Fix for filenames containing a #
- Build fix for KDE-3.1.x
- Add audio.visualization property for Xine (very nice for eg. web radio)
Changes since version 0.8.2-rc1
- Don't fill X log with ffmpeg output
- Jump to broadcast config page first when clicking broadcast button
- 'Start' button on broadcast config page and two leds for ffserver and ffmpeg